--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "viral/laravel-adminpanel",
-    "description": "The Laravel AdminPanel with API Boilerplate.",
+    "name": "shapelist",
+    "description": "media production ecommerce",
     "keywords": [
         "framework",
         "laravel",
