--- a/.ebextensions/init.config
+++ b/.ebextensions/init.config
@@ -1,3 +1,25 @@
 container_commands:
     01initdb:
+        command: "composer install"
+    02initdb:
+        command: "npm install"
+    03initdb:
+        command: "npm run dev"
+    04initdb:
+        command: "php artisan storage:link"
+    05initdb:
+        command: "php artisan key:generate"
+    06initdb:
+        command: "php artisan passport:install"
+    07initdb:
+        command: "php artisan vendor:publish --tag=lfm_public"
+    08initdb:
         command: "php artisan migrate"
+    09initdb:
+        command: "php artisan migrate:fresh --seed"
+    10initdb:
+        command: "php artisan passport:install"
+    
+    
+    
+    
