--- a/.env
+++ b/.env
@@ -13,11 +13,11 @@ LOG_CHANNEL=daily
 SINGLE_LOGIN=false
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=aa49any42ifdkq.citszi4ne9v1.eu-central-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=shapelist
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ebdb
+DB_USERNAME=RmOUThen
+DB_PASSWORD=dVD~XdE2]Rz$e}bU
 
 #session driver
 BROADCAST_DRIVER=log
