--- a/.env
+++ b/.env
@@ -13,11 +13,11 @@ LOG_CHANNEL=daily
 SINGLE_LOGIN=false
 
 DB_CONNECTION=mysql
-DB_HOST=aa49any42ifdkq.citszi4ne9v1.eu-central-1.rds.amazonaws.com
+DB_HOST=aa98q6lwrwu9ny.citszi4ne9v1.eu-central-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=ebdb
-DB_USERNAME=RmOUThen
-DB_PASSWORD=dVD~XdE2]Rz$e}bU
+DB_USERNAME=RmOUTheneR
+DB_PASSWORD=dVD~XdE2]Rz$e}bUBp
 
 #session driver
 BROADCAST_DRIVER=log
