--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 /public/storage
 /public/hot
 /storage/*.key
-/vendor
+vendor
 .idea
 Homestead.json
 Homestead.yaml
-#.env
+.env
 .DS_Store
 Thumbs.db
 *.sublime-project
