--- a/.env
+++ b/.env
@@ -32,17 +32,20 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mail.shapelist.com
+MAIL_HOST=depro6.fcomet.com
 MAIL_PORT=465
-MAIL_FROM_ADDRESS=no-reply@shapelist.com
-MAIL_USERNAME=no-reply@shapelist.com
+MAIL_FROM_ADDRESS=no-reply@shapelistapp.com
+MAIL_USERNAME=no-reply@shapelistapp.com
 MAIL_PASSWORD=C5ZZAcOBldUe
 MAIL_ENCRYPTION=SSL
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+
+AWS_ACCESS_KEY_ID=AKIA3HLAJ5VTRC3NCFBH
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=eu-central-1
+AWS_BUCKET=shapelist
+
+
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
