--- a/.env
+++ b/.env
@@ -39,13 +39,10 @@ MAIL_USERNAME=no-reply@shapelistapp.com
 MAIL_PASSWORD=C5ZZAcOBldUe
 MAIL_ENCRYPTION=SSL
 
-
-AWS_ACCESS_KEY_ID=AKIA3HLAJ5VTRC3NCFBH
-AWS_SECRET_ACCESS_KEY=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
-AWS_DEFAULT_REGION=eu-central-1
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
 AWS_BUCKET=shapelist
-
-
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
