--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_DEMO=false
 APP_NAME="shapelist"
 APP_ENV=local
-APP_KEY=base64:7NqJm9P/EQ1+WZ9pyF87iq+PZ20JEnVr9lUnDs0joDk=
+APP_KEY=base64:9Bl6i9tFGgmJXs8DAGuWmY294UBHc6QnoCFc+UiKW3E=
 APP_DEBUG=true
 DEBUGBAR_ENABLED=false
 APP_URL=http://localhost:8000
@@ -15,9 +15,9 @@ SINGLE_LOGIN=false
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=shapelist
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=shapelis_admin
+DB_USERNAME=shapelis_admin
+DB_PASSWORD=)&,SIHHn%k7A
 
 #session driver
 BROADCAST_DRIVER=log
@@ -39,10 +39,13 @@ MAIL_USERNAME=no-reply@shapelistapp.com
 MAIL_PASSWORD=C5ZZAcOBldUe
 MAIL_ENCRYPTION=SSL
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=
+
+AWS_ACCESS_KEY_ID=AKIA3HLAJ5VTRC3NCFBH
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=eu-central-1
 AWS_BUCKET=shapelist
+
+
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
