freeze phone number

--- a/.env
+++ b/.env
@@ -15,9 +15,9 @@ SINGLE_LOGIN=false
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=shapelis_admin
-DB_USERNAME=shapelis_admin
-DB_PASSWORD=)&,SIHHn%k7A
+DB_DATABASE=shapelist
+DB_USERNAME=root
+DB_PASSWORD=
 
 #session driver
 BROADCAST_DRIVER=log
@@ -40,11 +40,10 @@ MAIL_PASSWORD=C5ZZAcOBldUe
 MAIL_ENCRYPTION=SSL
 
 
-AWS_ACCESS_KEY_ID=AKIA3HLAJ5VTRC3NCFBH
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=AKIA3HLAJ5VT7Z6OKPXW
+AWS_SECRET_ACCESS_KEY=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
 AWS_DEFAULT_REGION=eu-central-1
 AWS_BUCKET=shapelist
-
 
 
 PUSHER_APP_ID=
