--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,4 @@
 {
-    "name": "shapelist",
     "description": "media production ecommerce",
     "keywords": [
         "framework",
@@ -26,7 +25,6 @@
         "laravel/socialite": "^4.2",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "6.0.*",
-        "league/flysystem-aws-s3-v3": "^1.0",
         "spatie/laravel-cors": "^1.6",
         "unisharp/laravel-filemanager": "~1.8",
         "yajra/laravel-datatables-oracle": "~9.0"
@@ -34,13 +32,14 @@
     "require-dev": {
         "bvipul/generator": "^v6",
         "codedungeon/phpunit-result-printer": "^0.26",
+        "facade/ignition": "^1.4",
         "friendsofphp/php-cs-fixer": "^2.14",
         "fzaninotto/faker": "^1.4",
         "laravel/telescope": "^2.1",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^8.0",
-        "facade/ignition": "^1.4",
-        "nunomaduro/collision": "^3.0"
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.0"
     },
     "config": {
         "optimize-autoloader": true,
