--- a/.env
+++ b/.env
@@ -40,10 +40,11 @@ MAIL_PASSWORD=C5ZZAcOBldUe
 MAIL_ENCRYPTION=SSL
 
 
-AWS_ACCESS_KEY_ID=AKIA3HLAJ5VT7Z6OKPXW
-AWS_SECRET_ACCESS_KEY=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
-AWS_DEFAULT_REGION=eu-central-1
-AWS_BUCKET=shapelist
+AWS_ACCESS_KEY_ID=AKIA3HLAJ5VT6LYAT2HP
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=me-south-1
+AWS_BUCKET=shapelist.uploads
+AWS_URL = https://shapelist.uploads.s3.me-south-1.amazonaws.com
 
 
 PUSHER_APP_ID=
