--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APP_URL=http://localhost:8000
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_LOCALE_PHP=en_US
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Riyadh
 LOG_CHANNEL=daily
 SINGLE_LOGIN=false
 
