--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "laravel/socialite": "^4.2",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "6.0.*",
-        "league/flysystem-aws-s3-v3": "^1.0",
+        "league/flysystem-aws-s3-v3": "~1.0",
         "spatie/laravel-cors": "^1.6",
         "unisharp/laravel-filemanager": "~1.8",
         "yajra/laravel-datatables-oracle": "~9.0"
