--- a/.env
+++ b/.env
@@ -15,9 +15,9 @@ SINGLE_LOGIN=false
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=shapelis_admin
-DB_USERNAME=shapelis_admin
-DB_PASSWORD=)&,SIHHn%k7A
+DB_DATABASE=shapelist
+DB_USERNAME=root
+DB_PASSWORD=
 
 #session driver
 BROADCAST_DRIVER=log
