--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_ENV=local
 APP_KEY=base64:9Bl6i9tFGgmJXs8DAGuWmY294UBHc6QnoCFc+UiKW3E=
 APP_DEBUG=true
 DEBUGBAR_ENABLED=false
-APP_URL=http://localhost:8000
+APP_URL=https://shapelistapp.com/
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_LOCALE_PHP=en_US
@@ -15,9 +15,9 @@ SINGLE_LOGIN=false
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=shapelist
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=shapelis_admin
+DB_USERNAME=shapelis_admin
+DB_PASSWORD=)&,SIHHn%k7A
 
 #session driver
 BROADCAST_DRIVER=log
