--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -35,11 +35,12 @@ jobs:
           target: web-server
           tag_with_ref: true
           tag_with_sha: true
-      - name: Build & Push NGINX image
+      - name: Build & Push Laravel image
         uses: docker/build-push-action@v1
         with:
           registry: 771685477735.dkr.ecr.me-south-1.amazonaws.com
           repository: shapelist/laravel
+          cache_froms: 771685477735.dkr.ecr.me-south-1.amazonaws.com/shapelist/laravel:latest
           username: AWS  # temporary
           password: ${{ steps.get-ecr-password.outputs.password }}  # temporary
           tags: latest,staging
