Fix staging secrets

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Executing remote ssh commands using password
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SSH_HOST }}
+          host: ${{ secrets.SSH_HOST_STAGING }}
           username: ${{ secrets.SSH_USER }}
-          password: ${{ secrets.SSH_PASSWORD }}
+          password: ${{ secrets.SSH_PASSWORD_STAGING }}
           script: ./deploy-backend.sh
