--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-name: Staging Deployment
+name: Production Deployment
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - '**'
 
 jobs:
-  release:
+  build:
     name: Retag & Push Docker Image
     runs-on: ubuntu-latest
     steps:
