Ok, we need to checkout our source code first)

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Get ECR password (temporary)
         id: get-ecr-password
         run: echo "::set-output name=password::$(aws ecr get-login-password)"
+      - name: Check out repository code
+        uses: actions/checkout@v2
       - name: Build & Push NGINX image
         uses: docker/build-push-action@v1
         with:
