--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Generate Dockerfile with APP_KEY
         env:
-          APP_KEY: {{ secrets.APP_KEY_PRODUCTION }}
+          APP_KEY: ${{ secrets.APP_KEY_PRODUCTION }}
         run: cat Dockerfile.envsubst.template | envsubst > Dockerfile
       - name: Build & Push NGINX image
         uses: docker/build-push-action@v1
